# app/Http/Controllers/API/FarmerProfileController.php
@@ -8,6 +8,8 @@ use App\Models\FarmerProfile;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Validator;
 
+use function PHPSTORM_META\type;
+
 /**
  * @group Farmer Profile
  * 
@@ -120,7 +122,46 @@ class FarmerProfileController extends Controller
 
     public function registerFarmer(Request $request)
     {
-        // //Validate Request Data
+      
+      $validator = $request->validate([
+        $request->first_name => 'required|string',
+        $request->last_name => 'required|string',
+        $request->dob => 'required|string',
+        $request->gender => 'required|string',
+        $request->education_level => 'required|string',
+        $request->id_number => 'required|string|unique:farmer_profiles,id_number',
+        $request->marital_status => 'required|string',
+        $request->district => 'required|string',
+        $request->county => 'required|string',
+        $request->sub_county => 'required|string',
+        $request->parish => 'required|string',
+        $request->village => 'required|string',
+        $request->fpo_id => 'required|integer',
+        $request->farmer_cordinates => 'required|string',
+        $request->next_of_kin => 'required|string',
+        $request->next_of_kin_contact => 'required|string',
+        $request->next_of_kin_relationship => 'required|string',
+        $request->male_members_in_household => 'required|integer',
+        $request->female_members_in_household => 'required|integer',
+        $request->members_above_18 => 'required|integer',
+        $request->children_below_5 => 'required|integer',
+        $request->school_going_children => 'required|integer',
+        $request->head_of_family => 'required|string',
+        $request->how_much_do_you_earn_from_agricultural_activities => 'required',
+        $request->how_much_do_you_earn_from_non_agricultural_activities => 'required',
+        $request->do_you_have_an_account_with_an_FI => 'required',
+        $request->farm_size => 'required|string',
+        $request->farm_size_under_agriculture => 'required|string',
+        $request->land_ownership => 'required|string',
+        $request->type_of_farming => 'required|string',
+        $request->crops_grown => 'required|string',
+        $request->animals_kept => 'required|string',
+        $request->estimated_produce_value_last_season => 'required|string',
+        $request->estimated_produce_value_this_season => 'required|string',
+        $request->agent_id => 'required|integer',
+      ]);  
+   
+      // //Validate Request Data
         // $validate = $request->validate([
         //     $request->first_name => 'required|string',
         //     $request->last_name => 'required|string',
@@ -169,6 +210,7 @@ class FarmerProfileController extends Controller
         
         //Save Data
         $farmer = new FarmerProfile();
+        $farmer->farmer_id = $this->generateFarmerId();
         $farmer->first_name = $request->first_name;
         $farmer->last_name = $request->last_name;
         $farmer->dob = $request->dob;
@@ -218,5 +260,23 @@ class FarmerProfileController extends Controller
         ], 201);
     }
 
+    private function generateFarmerId()
+    {
+        $farmerId = strtoupper(uniqid());
+        if($this->farmerIdExists($farmerId)){
+            $this->generateFarmerId();
+        }
+        return $farmerId;
+    }
+
+    private function farmerIdExists($farmerId)
+    {
+        return FarmerProfile::where('farmer_id', $farmerId)->exists();
+    }
+
+
     //Get all farmers
+
+
+   
 }
